--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ HeapDict==1.0.1
 httplib2==0.12.1
 humanfriendly==4.8
 idna==2.8
-iisignature==0.23
+#iisignature==0.23
 imagesize==1.1.0
 importlib-metadata==0.18
 inflection==0.3.1
