--- a/requirements.txt
+++ b/requirements.txt
@@ -136,7 +136,7 @@ tensorboard==1.13.1
 tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
-tick==0.6.0.0
+#tick==0.6.0.0
 toolz==0.10.0
 tornado==6.0.3
 uritemplate==3.0.0
