--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ dask-kubernetes==0.10.0
 decorator==4.4.0
 dill==0.3.1.1
 docutils==0.15.2
+flask==1.1.1
 gast==0.2.2
 google-api-python-client==1.7.8
 google-auth==1.6.3
